--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 1. 데이터 필터링: '작성자' 컬럼을 확인하여 유튜버(채널 운영자)의 아이디를 먼저 파악합니다. 그 후, 유튜버가 작성한 모든 댓글과 대댓글을 분석 대상에서 완전히 제외합니다. 이후의 모든 분석은 필터링된, 즉 순수 구독자의 댓글만을 대상으로 진행합니다.
 2. 데이터 분석: 필터링된 구독자 댓글 데이터를 전체적으로 분석하여, 구독자들이 주로 언급하는 피부 고민, 질문, 요청사항 등의 핵심 키워드와 주제를 파악합니다.
 3. 카테고리화: 파악된 주제들을 의미 있는 단위로 그룹화하여 '핵심 문제/콘텐츠 요청' 카테고리를 생성합니다. (예: 여드름/트러블, 모공/블랙헤드, 제품 추천 요청 등)
-4. 빈도수 계산: 각 카테고리에 해당하는 댓글의 **총 개수(건수)**와 전체 댓글에서 차지하는 **비율(%)**을 계산합니다.
+4. 빈도수 계산: 각 카테고리에 해당하는 댓글의 총 개수(건수)와 전체 댓글에서 차지하는 비율(%)을 계산합니다.
 5. 순위 결정: 계산된 빈도수를 기준으로 가장 많이 언급된 순서대로 '빈도 순위'를 매깁니다.
 6. 대표 댓글 선정: 각 카테고리의 특징과 문제점을 가장 잘 보여주는 실제 구독자 댓글을 하나씩 선정하여 '대표 댓글 인용' 항목에 기입합니다.
 7. 내재된 니즈 추론: 각 카테고리의 댓글에 담긴 표면적인 질문을 넘어, 구독자들이 근본적으로 원하는 것이 무엇인지(예: 시간/비용 절약, 불안감 해소, 자기효능감 획득 등)를 추론하여 '내재된 니즈' 항목에 작성합니다.
@@ -388,3 +388,4 @@
     </script>
 </body>
 </html>
+
