--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- 프롬프트 복사 섹션 -->
         <div class="mt-4 p-4 bg-gray-50 rounded-lg text-center border border-gray-200">
             <div class="flex items-center justify-center">
-                 <a href="https://gemini.google.com" target="_blank" class="text-sm text-blue-600 hover:underline font-medium">gemini에 붙여넣을 분석 프롬프트 복사하기 (클릭)</a>
+                 <a href="https://gemini.google.com" target="_blank" class="text-sm text-blue-600 hover:underline font-medium">gemini</a>&nbsp;붙여넣을 분석 프롬프트 복사하기
                  <button id="copyPromptButton" class="ml-4 bg-gray-200 text-gray-800 text-xs font-bold py-1 px-3 rounded-md hover:bg-gray-300 transition-all">복사</button>
             </div>
         </div>
@@ -366,3 +366,4 @@
     </script>
 </body>
 </html>
+
